# cheat-tool

./: package-lock.json  package.json  tailwind.config.js
src/: App.tsx  RustBridge.ts  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  db.rs  emit_keypress.rs  lib.rs  main.rs  process.rs  scripts.rs  watch_keypress.rs
src/components/: OverviewCard.tsx  SideBar.tsx  ValueInspectOverlay.tsx
src/context/: CurrentProcessProvider.tsx  SettingsProvider.tsx
src/pages/: ProcessPage.tsx  ScriptsPage.tsx  SelectProcessPage.tsx  VariablesPage.tsx
